@@ -1,3 +1,8 @@
+2003-05-08  Ross Burton  <ross@burtonini.com>
+
+	* gconf/gconf-client.[ch]: Add gconf_client_notify(), to fake a
+	notification from a monitored key. Fixes #70553.
+
 2003-05-07  Danilo Šegan  <dsegan@gmx.net>
 
 	* configure.in: Added "sr" and "sr@Latn" to ALL_LINGUAS.
